<resources>
    <string name="app_name">Escola para todos</string>
    <string name="strLogo">Escola\n \n para \n \ntodos</string>
    <string name="strAreaProf">Área do professor</string>
    <string name="strAreaAluno">Área do aluno</string>
    <string name="logoToolbar">Escola para todos</string>
    <string name="telefone">Telefone:</string>
    <string name="senha">Senha:</string>
    <string name="login">Login</string>
    <string name="naoSouCadastrado">Não sou cadastrado</string>
    <string name="nome">Nome:</string>
    <string name="utilizarApp">Vou utilizar o aplicativo como:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="aluno">aluno</string>
    <string name="professor">Professor</string>
    <string name="bemVindo">Bem vindo, Aluno</string>
    <string name="disciplinas">Disciplinas:</string>
    <string name="criarDisciplina">Criar uma disciplina</string>
    <string name="matematica">Matemática</string>
    <string name="biblioteca">Biblioteca</string>
    <string name="atividades">Atividades</string>
    <string name="calendario">Calendário</string>
    <string name="aulas">Aulas</string>
    <string name="boletim">Boletim</string>
    <string name="alunos">Alunos</string>
    <string name="idade">Idade:</string>
    <string name="formacao">Formação:</string>
    <string name="fazerDownload">Fazer Download</string>
    <string name="entrarAula">Entrar na aula</string>
    <string name="iniciarAula">Iniciar uma aula</string>
    <string name="baixarAudio">Baixar áudio 300kb</string>
    <string name="baixarTexto">Baixar texto 300kb</string>


</resources>