<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroScreen"
    android:background="@drawable/background">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="28dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/chawp"
        android:text="@string/nome"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nomeUsuario"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="#4dc4c4c4"
        android:ems="10"
        android:fontFamily="@font/chawp"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:text=""
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textColorHint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/chawp"
        android:text="@string/telefone"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeUsuario" />

    <EditText
        android:id="@+id/telefoneUsuario"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="#4dc4c4c4"
        android:ems="10"
        android:inputType="phone"
        android:text=""
        android:hint="@string/telefone"
        android:paddingStart="10dp"
        android:textSize="22sp"
        android:textColorHint="@android:color/transparent"
        android:fontFamily="@font/chawp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/chawp"
        android:text="@string/senha"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefoneUsuario" />

    <EditText
        android:id="@+id/senhaUsuario"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="#4dc4c4c4"
        android:ems="10"
        android:inputType="textPassword"
        android:text=""
        android:hint="@string/senha"
        android:paddingStart="10dp"
        android:textSize="22sp"
        android:textColorHint="@android:color/transparent"
        android:fontFamily="@font/chawp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/chawp"
        android:text="@string/utilizarApp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhaUsuario" />


    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#e6000000"
        android:fontFamily="@font/chawp"
        android:text="@string/cadastrar"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white"
        android:textColor="@color/white"
        app:strokeWidth="1dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <RadioButton
            android:id="@+id/radioAluno"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/radio_button"
            android:button="@android:color/transparent"
            android:checked="true"
            android:fontFamily="@font/chawp"
            android:text="@string/aluno"
            android:textColor="@android:color/transparent"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/chawp"
            android:paddingStart="15dp"
            android:text="@string/aluno"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <RadioButton
            android:id="@+id/radioProf"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/radio_button"
            android:button="@android:color/transparent"
            android:fontFamily="@font/chawp"
            android:text="@string/professor"
            android:textColor="@android:color/transparent"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/chawp"
            android:paddingStart="15dp"
            android:text="@string/professor"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />
    </RadioGroup>

    <TextView
        android:id="@+id/idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/chawp"
        android:text="@string/idade"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/idadeAluno"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="#4dc4c4c4"
        android:ems="10"
        android:fontFamily="@font/chawp"
        android:hint="@string/senha"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textSize="22sp"
        android:text=""
        android:visibility="visible"
        android:textColor="@color/white"
        android:textColorHint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idade" />

    <TextView
        android:id="@+id/formacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/chawp"
        android:text="@string/formacao"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idadeAluno" />

    <EditText
        android:id="@+id/formacaoProf"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="#4dc4c4c4"
        android:ems="10"
        android:textSize="22sp"
        android:fontFamily="@font/chawp"
        android:hint="@string/senha"
        android:inputType="text"
        android:paddingStart="10dp"
        android:text=""
        android:visibility="gone"
        android:textColor="@color/white"
        android:textColorHint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formacao" />

</androidx.constraintlayout.widget.ConstraintLayout>